# A2C_DVI_Firmware

./: CHANGELOG.md  CMakeLists.txt  env.sh
Releases/: A2C_DVI_S_v1.8.4-eo.uf2  A2C_DVI_S_v1.8.5-eo.uf2
_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
_BUILD/pico-sdk/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/docs/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2040/boot_stage2/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2040/pico_platform/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_flash/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_i2c/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_interp/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_irq/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_pio/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_pll/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_pwm/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_resets/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_rtc/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_spi/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_sync/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_sync_spin_lock/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_ticks/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_timer/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_uart/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_vreg/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_watchdog/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_xip_cache/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/hardware_xosc/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_aon_timer/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_async_context/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_atomic/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_bit_ops/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_bootrom/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_bootsel_via_double_reset/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_btstack/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_clib_interface/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_crt0/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_cxx_options/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_cyw43_arch/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_cyw43_driver/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_divider/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_double/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_fix/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_flash/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_float/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_i2c_slave/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_int64_ops/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/src/rp2_common/pico_lwip/: Makefile  cmake_install.cmake
_BUILD/pico-sdk/tools/: Makefile  cmake_install.cmake
_BUILD/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
_BUILD/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
assets/: applesoft_color_test.bas
firmware/a2c/: a2c.c  hgrdecode_LUT.h
firmware/dvi/: tmds.h
tools/: clamp_improved_lut.py  clamp_to_improved_lut.py  generate_clamp_reference.py
(+57 files in other folders)
